Closed Bug 1824723 Opened 1 year ago Closed 1 year ago

Set the content type to the proper name when ObliviousHTTPChannel is used with POST

Categories

(Core :: Networking, defect, P1)

defect

Tracking

()

RESOLVED FIXED
113 Branch
Tracking Status
firefox112 --- fixed
firefox113 --- fixed

People

(Reporter: valentin, Assigned: valentin)

References

(Blocks 1 open bug)

Details

(Whiteboard: [necko-triaged])

Attachments

(2 files)

ObliviousHttpChannel::SetContentType currently forwards the content type to the inner channel, and we overwrite that with "message/ohttp-req" in AsyncOpen anyway.

Pushed by valentin.gosu@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/69a871757246
Also update TRR URI if network.trr.use_ohttp has changed r=necko-reviewers,kershaw
https://hg.mozilla.org/integration/autoland/rev/f75638461adc
Set the content type to the proper name when ObliviousHTTPChannel is used with POST r=necko-reviewers,jesup
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch

Comment on attachment 9325369 [details]
Bug 1824723 - Also update TRR URI if network.trr.use_ohttp has changed r=#necko

Beta/Release Uplift Approval Request

  • User impact if declined: DoH requests using OHTTP might be using the wrong domain causing the request to fail.
    This would happen only if the use_ohttp pref is changed after network.trr.ohttp.uri.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This changeset only affects users who have the network.trr.use_ohttp pref set - which is not on by default. We intend to do an experiment with it soon which is why I am requesting uplift.
  • String changes made/needed:
  • Is Android affected?: No
Attachment #9325369 - Flags: approval-mozilla-beta?

Comment on attachment 9325172 [details]
Bug 1824723 - Set the content type to the proper name when ObliviousHTTPChannel is used with POST r=#necko

Beta/Release Uplift Approval Request

  • User impact if declined: Encapsulated OHTTP requests would not contain a Content-Type header. This might cause the requests to fail, depending on the behaviour of the OHTTP target.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This changeset only affects users who have the network.trr.use_ohttp pref set - which is not on by default. We intend to do an experiment with it soon which is why I am requesting uplift.
  • String changes made/needed:
  • Is Android affected?: No
Attachment #9325172 - Flags: approval-mozilla-beta?

Comment on attachment 9325172 [details]
Bug 1824723 - Set the content type to the proper name when ObliviousHTTPChannel is used with POST r=#necko

Approved for 112.0b9

Attachment #9325172 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Attachment #9325369 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: