Bug 1824723 - Also update TRR URI if network.trr.use_ohttp has changed r=necko-reviewers,kershaw, a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D173671